Agregacion Juego Compañero
Se agrega un juego de un compañero

--- a/principal.html
+++ b/principal.html
@@ -2,10 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
-<<<<<<< HEAD
 		<link rel="icon" type="image/png" href="image/Log.jpg"><!--Para el icono-->
-=======
->>>>>>> 09cc828c23c807f6933f74255ff6df1e678d744e
 		<title>Juegos Friv UD</title>
 		<meta charset="UTF-8">
 		<style>
@@ -15,7 +12,6 @@
 		<h1><center> JUEGOS FRIV UD </h1>
 		<center>
 			<br><br>
-<<<<<<< HEAD
 			<table>
 			<!--Fin Tabla-->
 			<tr>
@@ -53,6 +49,13 @@
 			</tr>
 			
 			<tr>
+			 
+			<td>
+			<a href="Juegos/Block/index.html"><img src="image/Block.jpg" width="50" height="50" TITLE="Caza Craneos"></a>
+			</td>
+			<td>
+			<a href="Juegos/Gallina5/index.html"><img src="image/Gallina5.jpg" width="50" height="50" TITLE="Gallina 4"</a>
+			</td>
 			<!--Fila Bonus-->
 			<td>
 			<a href="Juegos/SpeedRace/index.html"><img src="image/SpeedRace.jpg" width="50" height="50" TITLE="Speed Race"></a>
@@ -74,13 +77,6 @@
 			
 			<!--Fin Tabla-->
 			</table>
-=======
-			<a href="Juegos/SnowRoad/snowRoad.html"><img src="image/moto.jpg" width="47" height="47"><br> Snow Road </a>
-			<br><br>
-			<a href="Juegos/Gallina/index.html"><img src="image/pollo.jpg" width="47" height="47"><br> Pollhor </a>
-			<br><br><br>
-			<a href="natalia.html"> juegos que no han enviado </a>
->>>>>>> 09cc828c23c807f6933f74255ff6df1e678d744e
 		</center>
 	</body>
 </html>
