Agregacion Gallina sola
Se agrega solo Gallina

--- a/principal.html
+++ b/principal.html
@@ -49,7 +49,6 @@
 			</tr>
 			
 			<tr>
-			 
 			<td>
 			<a href="Juegos/Block/index.html"><img src="image/Block.jpg" width="50" height="50" TITLE="Caza Craneos"></a>
 			</td>
@@ -58,11 +57,28 @@
 			</td>
 			<!--Fila Bonus-->
 			<td>
-			<a href="Juegos/SpeedRace/index.html"><img src="image/SpeedRace.jpg" width="50" height="50" TITLE="Speed Race"></a>
+			<a href="Juegos/Gallina6/index.html"><img src="image/Gallina6.jpg" width="50" height="50" TITLE="Gallina 4"</a>
 			</td>
 			<td>
 			<a href="Juegos/PingPong/index.html"><img src="image/PingPong.png" width="50" height="50" TITLE="Ping Pong"</a>
 			</td>
+			</tr>
+			<tr>
+			
+			<td>
+			<a href="Juegos/SpeedRace/index.html"><img src="image/SpeedRace.jpg" width="50" height="50" TITLE="Speed Race"></a>
+			</td>
+			
+			<!--Fila 
+			<a href="Juegos/Block/index.html"><img src="image/Block.jpg" width="50" height="50" TITLE="Caza Craneos"></a>
+			</td>
+			<td>
+			<a href="Juegos/Gallina5/index.html"><img src="image/Gallina5.jpg" width="50" height="50" TITLE="Gallina 4"</a>
+			</td>
+			<td>
+			<a href="Juegos/PingPong/index.html"><img src="image/PingPong.png" width="50" height="50" TITLE="Ping Pong"</a>
+			</td>
+			Bonus-->
 			<!--Fila 
 			<td>
 			<a href="Juegos/CazaCraneos/calavera.html"><img src="image/CazaCraneos.jpg" width="50" height="50" TITLE="Caza Craneos"></a>
